# Chess

./: .gitignore  Chess.cabal  Chess.hs  LICENSE  README.markdown  chess.cabal  main.hs
art/: chess-square-bg.xcf  piece-b-b.xcf  piece-b-k.xcf  piece-b-n.xcf  piece-b-p.xcf  piece-b-q.xcf  piece-b-r.xcf  piece-w-b.xcf  piece-w-k.xcf  piece-w-n.xcf  piece-w-p.xcf  piece-w-q.xcf  piece-w-r.xcf
scripts/: dev  gendocs  lint  pre-commit
src/: Chess.hs  Config.hs  Main.hs  main.hs
src/Codec/: PicturePrime.hs
src/Control/: Combinator.hs  MonadCond.hs
src/Data/: Cycle.hs  HashString.hs  Singleton.hs
src/Game/: Engine.hs  Gameplay.hs  Input.hs  Loaders.hs  Logic.hs  Render.hs  ResourceLoader.hs  SceneGraph.hs  Texture.hs
src/Game/Physics/: Collision.hs  Integration.hs  Types.hs
src/Game/Render/: Colors.hs  Core.hs  Renderers.hs
src/Game/Resource/: Loadable.hs  Loader.hs  Texture.hs  chooseResourceFlow.dot
src/Graphics/Rendering/OpenGL/: Monad.hs
src/Graphics/Rendering/OpenGL/Monad/: Unsafe.hs  Wrappers.hs
src/UI/: Colors.hs  Render.hs  Texture.hs  TextureCache.hs  TextureLoader.hs
src/UI/Render/: Core.hs  Renderers.hs
src/Util/: Defs.hs  HashString.hs
test/: Test.hs  Tests.hs
