Name:                Chess
Version:             0.1
Description:         OMG CHESS.
License:             MIT
License-file:        LICENSE
Author:              Clark Gaebel and Ben Foppa
Maintainer:          cgaebel@csclub.uwaterloo.ca, eatingstaples@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable Chess
  Main-is:           main.hs
  Build-Depends:     base >= 4 && < 5, stm >= 2 && < 3,
                     aeson >= 0.6 && < 1, conduit,
                     attoparsec-conduit < 1,
                     zlib >= 0.5.3 && < 0.5.3.2,
                     zlib-conduit < 1
