Name:                Chess
Version:             0.1
Description:         OMG CHESS.
Category:            Games
License:             MIT
License-file:        LICENSE
Author:              Clark Gaebel and Ben Foppa
Maintainer:          cgaebel@csclub.uwaterloo.ca, benjamin.foppa@gmail.com
Build-Type:          Simple
Cabal-Version:       >= 1.2

Executable Chess
    hs-source-dirs:    . src/
    Main-is:           main.hs
    GHC-Options:       -Wall

    Build-Depends:     base >= 4 && < 5,
                       stm >= 2 && < 3,
                       aeson >= 0.6 && < 1,
                       conduit,
                       attoparsec-conduit < 1,
                       zlib >= 0.5.3 && < 0.5.3.2,
                       zlib-conduit < 1,
                       GLUT >= 2.2 && < 3

test-suite ChessTests
    type: exitcode-stdio-1.0
    main-is:        Tests.hs
    hs-source-dirs: . test/

    build-Depends:  base >= 4 && < 5,
                    QuickCheck >= 2,
                    HUnit,
                    test-framework,
                    test-framework-hunit,
                    test-framework-quickcheck2
