Name:                Chess
Version:             1.0
Description:         OMG CHESS.
Category:            Games
License:             MIT
License-file:        LICENSE
Author:              Clark Gaebel and Ben Foppa
Maintainer:          cgaebel@csclub.uwaterloo.ca, benjamin.foppa@gmail.com
Build-Type:          Simple
Cabal-Version:       >= 1.9.2
Data-Files:          assets/*.png
Extra-Source-Files:  assets/*.png

Executable Chess
    hs-source-dirs:    src/
    Main-is:           Main.hs
    GHC-Options:       -Wall -threaded -rtsopts=all -fllvm -fno-warn-orphans
    Extensions:        UnboxedTuples
    Other-Modules:     Paths_Chess

    Build-Depends:     base,
                       containers ==0.4.*,
                       unordered-containers ==0.1.*,
                       transformers ==0.2.*,
                       text ==0.11.*,
                       stm ==2.3.*,
                       stm-chans ==1.3.*,
                       aeson ==0.*,
                       conduit ==0.2.*,
                       stm-conduit ==0.2.4.*,
                       OpenGLRaw ==1.2.*,
                       OpenGL ==2.5.*,
                       GLUT ==2.*,
                       JuicyPixels ==1.2,
                       hslogger ==1.*,
                       array < 1,
                       vector ==0.9.*,
                       StateVar ==1.*,
                       bytestring ==0.*,
                       template-haskell ==2.7.*,
                       hashable ==1.1.*,
                       filepath ==1.3.*,
                       deepseq ==1.3.*,
                       time ==1.4.*,
                       data-ivar ==0.30.*,
                       monad-par ==0.1.*,
                       global-variables ==1.0.*,
                       tuple ==0.2.*,
                       hmatrix ==0.13.*,
                       pointless-fun ==1.1.*

test-suite ChessTests
    type: exitcode-stdio-1.0
    main-is:    Test.hs
    hs-source-dirs: test/ src/

    Build-Depends:  base >= 4 && < 5,
                    QuickCheck >= 2,
                    HUnit,
                    test-framework,
                    test-framework-hunit,
                    test-framework-quickcheck2
