Name:                Chess
Version:             1.1
Description:         OMG CHESS.
Category:            Games
License:             MIT
License-file:        LICENSE
Author:              Clark Gaebel and Ben Foppa
Maintainer:          cgaebel@csclub.uwaterloo.ca, benjamin.foppa@gmail.com
Build-Type:          Simple
Cabal-Version:       >= 1.9.2
Data-Files:          assets/*.png
Extra-Source-Files:  assets/*.png

Executable Chess
    hs-source-dirs:    src/
    Main-is:           Main.hs
    GHC-Options:       -Wall -threaded -rtsopts=all -fllvm -fno-warn-orphans
    Extensions:        UnboxedTuples, NoImplicitPrelude

    Build-Depends:     base,
                       Summit == 0.11,
                       containers ==0.*,
                       unordered-containers ==0.*,
                       transformers ==0.*,
                       text ==0.*,
                       stm ==2.*,
                       stm-chans ==1.*,
                       aeson ==0.*,
                       conduit ==0.*,
                       stm-conduit ==0.*,
                       OpenGLRaw ==1.*,
                       OpenGL ==2.*,
                       GLUT ==2.*,
                       JuicyPixels ==2.0.*,
                       hslogger ==1.*,
                       array < 1,
                       vector ==0.*,
                       StateVar ==1.*,
                       bytestring ==0.*,
                       template-haskell ==2.*,
                       hashable ==1.*,
                       filepath ==1.*,
                       deepseq ==1.*,
                       time ==1.*,
                       data-ivar ==0.*,
                       monad-par ==0.*,
                       tuple ==0.*,
                       hmatrix ==0.13.*,
                       test-framework ==0.*,
                       pointless-fun ==1.*

test-suite ChessTests
    type: exitcode-stdio-1.0
    main-is:    Test.hs
    hs-source-dirs: test/ src/
    Extensions:     NoImplicitPrelude

    Build-Depends:  base >= 4 && < 5,
                    Summit,
                    QuickCheck >= 2,
                    tuple,
                    array,
                    deepseq,
                    HUnit,
                    test-framework,
                    test-framework-hunit,
                    test-framework-quickcheck2
